tenants/apps/example/canary/keycloak/middleware-oauth2-proxy-keycloak-canary.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth2-proxy-keycloak-canary-forward-auth
  labels:
    app.kubernetes.io/name: hello-web
    app.kubernetes.io/instance: hello-web-keycloak-canary
    platform.swhurl.com/managed: "true"
spec:
  forwardAuth:
    address: http://oauth2-proxy-keycloak-canary.ingress.svc.cluster.local/oauth2/auth
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-Access-Token
      - X-Auth-Request-User
      - X-Auth-Request-Email
      - X-Auth-Request-Preferred-Username
      - Authorization
