tenants/apps/example/canary/keycloak/ingress-hello-web-keycloak-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-web-keycloak-canary
  labels:
    app.kubernetes.io/name: hello-web
    app.kubernetes.io/instance: hello-web-keycloak-canary
    platform.swhurl.com/managed: "true"
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: apps-staging-oauth2-proxy-keycloak-canary-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - keycloak-canary-hello.homelab.swhurl.com
      secretName: hello-web-keycloak-canary-tls
  rules:
    - host: keycloak-canary-hello.homelab.swhurl.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-web
                port:
                  number: 80
